--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,7 @@ phases:
       - echo writing image definition file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo $DOCKER_CONTAINER_NAME
-      - echo printing imagedefinition.json
+      - echo printing imagedefinitions.json
       - cat imagedefinitions.json
 artifacts:
   files:
